@@ -1534,7 +1534,7 @@ void Dance_schedule::now_what
 	for (int i = 0; i < 4; i++)
 					// Spin with 'hands outstretched'.
 		frames[i] = npc->get_dir_framenum((2*(dir + i))%8, 
-					npc->get_shapenum() == 846 ? 15 : 9);
+				   (npc->get_shapenum() == 846 && GAME_SI) ? 15 : 9);
 					// Create action to walk.
 	Actor_action *walk = new Path_walking_actor_action(new Zombie());
 	walk->walk_to_tile(npc, cur, dest);
